--- a/common-config-spring-boot/pom.xml
+++ b/common-config-spring-boot/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.zalando.spring</groupId>
         <artifactId>fahrschein-spring-boot-starter-parent</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
     <artifactId>common-config-spring-boot</artifactId>
     <dependencies>
