--- a/fahrschein-spring-boot-starter/pom.xml
+++ b/fahrschein-spring-boot-starter/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.zalando.spring</groupId>
         <artifactId>fahrschein-spring-boot-starter-parent</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2</version>
     </parent>
     <artifactId>fahrschein-spring-boot-starter</artifactId>
     <dependencies>
