--- a/fahrschein-spring-boot-starter/pom.xml
+++ b/fahrschein-spring-boot-starter/pom.xml
@@ -83,5 +83,11 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.11.1</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 </project>
