--- a/pom.xml
+++ b/pom.xml
@@ -52,12 +52,12 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <slf4j.version>1.7.25</slf4j.version>
-        <spring.version>5.0.8.RELEASE</spring.version>
-        <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
+        <spring.version>5.0.10.RELEASE</spring.version>
+        <spring-boot.version>2.0.6.RELEASE</spring-boot.version>
         <jackson.version>2.9.6</jackson.version>
         <problem.version>0.21.0</problem.version>
         <fauxpas.version>0.8.0</fauxpas.version>
-        <fahrschein.version>0.15.0</fahrschein.version>
+        <fahrschein.version>0.16.0</fahrschein.version>
     </properties>
 
     <dependencyManagement>
@@ -191,6 +191,7 @@
             <plugin>
                 <groupId>org.basepom.maven</groupId>
                 <artifactId>duplicate-finder-maven-plugin</artifactId>
+                <version>1.3.0</version>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -247,6 +248,7 @@
                         <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
                     </configuration>
                 </plugin>
+                <!--
                 <plugin>
                     <groupId>org.basepom.maven</groupId>
                     <artifactId>duplicate-finder-maven-plugin</artifactId>
@@ -267,6 +269,7 @@
                         </execution>
                     </executions>
                 </plugin>
+                -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
@@ -376,8 +379,8 @@
         <profile>
             <id>spring4</id>
             <properties>
-                <spring.version>4.3.18.RELEASE</spring.version>
-                <spring-boot.version>1.5.14.RELEASE</spring-boot.version>
+                <spring.version>4.3.20.RELEASE</spring.version>
+                <spring-boot.version>1.5.17.RELEASE</spring-boot.version>
             </properties>
         </profile>
         <profile>
