--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.zalando.spring</groupId>
     <artifactId>fahrschein-spring-boot-starter-parent</artifactId>
-    <version>0.0.6</version>
+    <version>0.0.7-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Fahrschein Spring-Boot Starter</name>
@@ -13,7 +13,7 @@
         <url>https://github.com/jbellmann/fahrschein-spring-boot-starter</url>
         <connection>scm:git:git@github.com:jbellmann/fahrschein-spring-boot-starter.git</connection>
         <developerConnection>scm:git:git@github.com:jbellmann/fahrschein-spring-boot-starter.git</developerConnection>
-      <tag>0.0.6</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <organization>
