add authorization config

--- a/fahrschein-spring-boot-starter/src/test/resources/application.yml
+++ b/fahrschein-spring-boot-starter/src/test/resources/application.yml
@@ -9,6 +9,10 @@ fahrschein:
     application-name: an_application_name
     consumer-group: an_consumer_group_name
     read-from: END
+    authorizations:
+      anyReader: true
+      admins:
+        service: nakajima
     stream-parameters:
       batch-limit: 1
       streamLimit: 1
