--- a/fahrschein-spring-boot-starter-spring-boot-2-support/pom.xml
+++ b/fahrschein-spring-boot-starter-spring-boot-2-support/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.zalando.spring</groupId>
         <artifactId>fahrschein-spring-boot-starter-parent</artifactId>
-        <version>0.0.13</version>
+        <version>0.0.14-SNAPSHOT</version>
     </parent>
     <artifactId>fahrschein-spring-boot-starter-spring-boot-2-support</artifactId>
 
