--- a/fahrschein-starter-it-parent/fahrschein-spring-boot-starter-it/pom.xml
+++ b/fahrschein-starter-it-parent/fahrschein-spring-boot-starter-it/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.zalando.spring</groupId>
         <artifactId>fahrschein-starter-it-parent</artifactId>
-        <version>0.0.14-SNAPSHOT</version>
+        <version>0.0.14</version>
     </parent>
     <artifactId>fahrschein-spring-boot-starter-it</artifactId>
 
