[maven-release-plugin] prepare release 0.0.15

--- a/fahrschein-starter-tests/fahrschein-starter-smoke-tests-invoker/pom.xml
+++ b/fahrschein-starter-tests/fahrschein-starter-smoke-tests-invoker/pom.xml
@@ -1,11 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.zalando.spring</groupId>
         <artifactId>fahrschein-starter-tests</artifactId>
-        <version>0.0.15-SNAPSHOT</version>
+        <version>0.0.15</version>
     </parent>
     <artifactId>fahrschein-starter-smoke-tests-invoker</artifactId>
     <packaging>pom</packaging>
@@ -54,9 +52,7 @@
                         <configuration>
                             <target>
                                 <delete includeemptydirs="true">
-                                    <fileset
-                                        dir="${main.basedir}/spring-boot-tests/spring-boot-smoke-tests"
-                                        includes="**/target/" />
+                                    <fileset dir="${main.basedir}/spring-boot-tests/spring-boot-smoke-tests" includes="**/target/" />
                                 </delete>
                             </target>
                         </configuration>
