--- a/fahrschein-starter-tests/fahrschein-starter-smoke-tests-invoker/pom.xml
+++ b/fahrschein-starter-tests/fahrschein-starter-smoke-tests-invoker/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.zalando.spring</groupId>
         <artifactId>fahrschein-starter-tests</artifactId>
-        <version>0.0.15</version>
+        <version>0.0.16-SNAPSHOT</version>
     </parent>
     <artifactId>fahrschein-starter-smoke-tests-invoker</artifactId>
     <packaging>pom</packaging>
