--- a/fahrschein-starter-tests/src/it/fahrschein-spring-boot-starter-it-2.1.x/pom.xml
+++ b/fahrschein-starter-tests/src/it/fahrschein-spring-boot-starter-it-2.1.x/pom.xml
@@ -1,28 +1,27 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.zalando.spring</groupId>
-        <artifactId>fahrschein-starters-smoke-tests</artifactId>
-        <version>0.0.15-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.7.RELEASE</version>
+        <relativePath /> <!-- lookup parent from repository -->
     </parent>
-    <artifactId>fahrschein-spring-boot-starter-it</artifactId>
+    <artifactId>fahrschein-spring-boot-starter-it-2.1.x</artifactId>
+    <version>@project.version@</version>
 
     <properties>
-        <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
         <javax-validation.version>2.0.1.Final</javax-validation.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <!-- Import dependency management from Spring Boot -->
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
             <dependency>
                 <!-- Import dependency management from JUNIT -->
                 <groupId>org.junit</groupId>
@@ -36,9 +35,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.zalando.spring</groupId>
             <artifactId>fahrschein-spring-boot-starter</artifactId>
-            <version>${project.version}</version>
+            <version>@project.version@</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -111,9 +110,18 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <systemPropertyVariables>
+                        <java.security.egd>file:/dev/./urandom</java.security.egd>
+                        <java.awt.headless>true</java.awt.headless>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -127,21 +135,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${maven-failsafe-plugin.version}</version>
-            </plugin>
-            <plugin>
-                <groupId>pl.project13.maven</groupId>
-                <artifactId>git-commit-id-plugin</artifactId>
-                <version>${git-commit-id-plugin.version}</version>
-                <configuration>
-                    <dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
-                    <skipPoms>false</skipPoms>
-                    <generateGitPropertiesFile>false</generateGitPropertiesFile>
-                    <gitDescribe>
-                        <dirty>locally-modified</dirty>
-                        <always>false</always>
-                        <abbrev>0</abbrev>
-                    </gitDescribe>
-                </configuration>
             </plugin>
         </plugins>
     </build>
