--- a/fahrschein-starter-tests/src/it/fahrschein-spring-boot-starter-it-1.5.x/pom.xml
+++ b/fahrschein-starter-tests/src/it/fahrschein-spring-boot-starter-it-1.5.x/pom.xml
@@ -3,39 +3,31 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.zalando.spring</groupId>
-        <artifactId>fahrschein-starters-smoke-tests</artifactId>
-        <version>0.0.15-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.22.RELEASE</version>
+        <relativePath /> <!-- lookup parent from repository -->
     </parent>
     <artifactId>fahrschein-spring-boot-starter-it-1.5.x</artifactId>
+    <version>@project.version@</version>
 
     <properties>
-        <spring-boot.version>1.5.22.RELEASE</spring-boot.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
         <javax-validation.version>1.1.0.Final</javax-validation.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
     </properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <!-- Import dependency management from Spring Boot -->
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.zalando.spring</groupId>
             <artifactId>fahrschein-spring-boot-starter</artifactId>
-            <version>${project.version}</version>
+            <version>@project.version@</version>
             <exclusions>
                 <exclusion>
-                    <groupId>${project.groupId}</groupId>
+                    <groupId>org.zalando.spring</groupId>
                     <artifactId>fahrschein-spring-boot-starter-spring-boot-2-support</artifactId>
                 </exclusion>
             </exclusions>
@@ -102,9 +94,18 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <systemPropertyVariables>
+                        <java.security.egd>file:/dev/./urandom</java.security.egd>
+                        <java.awt.headless>true</java.awt.headless>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -118,21 +119,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${maven-failsafe-plugin.version}</version>
-            </plugin>
-            <plugin>
-                <groupId>pl.project13.maven</groupId>
-                <artifactId>git-commit-id-plugin</artifactId>
-                <version>${git-commit-id-plugin.version}</version>
-                <configuration>
-                    <dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
-                    <skipPoms>false</skipPoms>
-                    <generateGitPropertiesFile>false</generateGitPropertiesFile>
-                    <gitDescribe>
-                        <dirty>locally-modified</dirty>
-                        <always>false</always>
-                        <abbrev>0</abbrev>
-                    </gitDescribe>
-                </configuration>
             </plugin>
         </plugins>
     </build>
