--- a/fahrschein-starter-project/common-config-spring-boot/pom.xml
+++ b/fahrschein-starter-project/common-config-spring-boot/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.zalando.spring</groupId>
         <artifactId>fahrschein-starter-project</artifactId>
-        <version>0.0.16-SNAPSHOT</version>
+        <version>0.0.16</version>
     </parent>
     <artifactId>common-config-spring-boot</artifactId>
 
