--- a/fahrschein-starter-tests/pom.xml
+++ b/fahrschein-starter-tests/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.zalando.spring</groupId>
         <artifactId>fahrschein-spring-boot-starter-parent</artifactId>
-        <version>0.0.16</version>
+        <version>0.0.17-SNAPSHOT</version>
     </parent>
     <artifactId>fahrschein-starter-tests</artifactId>
     <packaging>pom</packaging>
