--- a/fahrschein-starter-project/fahrschein-spring-boot-starter-config/pom.xml
+++ b/fahrschein-starter-project/fahrschein-spring-boot-starter-config/pom.xml
@@ -21,9 +21,13 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>common-config-spring-boot</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>26.0-jre</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
