--- a/fahrschein-starter-project/fahrschein-spring-boot-starter-spring-boot-2-support/pom.xml
+++ b/fahrschein-starter-project/fahrschein-spring-boot-starter-spring-boot-2-support/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.zalando.spring</groupId>
         <artifactId>fahrschein-starter-project</artifactId>
-        <version>0.0.18</version>
+        <version>0.0.19-SNAPSHOT</version>
     </parent>
     <artifactId>fahrschein-spring-boot-starter-spring-boot-2-support</artifactId>
 
